Removed the head photo because I was still recieving feedback that the sword looked too much like a cross.  I will fix it soon and update but for now, its probably best if its not there

--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ div#nav{
     color: white;
     background-color: #6d6c6a;
     border-radius: 5px;
+    margin-top: 5px;
 }
 div#nav ul{
     padding: 5px 0px 5px 0px;
